# zuu

./: .gitignore  LICENSE  README.md  lefthook.yml  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
demos/: process_watchdog.py
demos/i18n_sync_demo/: i18n_syncdict_demo.py
demos/i18n_sync_demo/base_translations/: de.json  en.json  es.json  fr.json  ja.json  zh.json
demos/i18n_sync_demo/playground/: de.json  en.json  es.json  fr.json  ja.json  sync_summary.json  zh.json
playground/: flask_simple_blacklist.py  flask_simple_ratelimit.py
scripts/: bump_micro_version.py
src/zuu/: class_prop.py  clipchamp.py  dart.py  dart_slang_migration.py  date_folder_struct.py  dict_patterns.py  diffdict.py  flask.py  flask_ratelimit.py  flask_simple_blacklist.py  flask_simple_ratelimit.py  flatten_env.py  fstring.py  geo_lookup.py  hmac_verify.py  image_base64_conversion.py  json_io.py  match_string.py  nested_dict.py  obsidian.py  process_watchdog.py  scoop.py  simple_cache_deco.py  simple_dict.py  simple_string.py  simple_time.py  steam_process.py  syncdict.py  task_scheduler.py
tests/: test_class_prop.py  test_compute_nested.py  test_date_folder_struct.py  test_dict_patterns.py  test_dict_patterns_mask.py  test_diffdict.py  test_diffdict_advanced.py  test_geo_lookup.py  test_json_io.py  test_match_string.py  test_merge_dict.py  test_nested_dict.py  test_scoop.py  test_simple_dict.py  test_simple_string.py  test_syncdict.py  test_syncdict_advanced.py  test_syncdict_enhanced.py
