[project]
name = "zuu"
version = "25.8.5"
description = "Zack's Useful Utilities - A collection of Python utilities for various tasks."
authors = [
    { name = "ZackaryW", email = "gitzackw@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
    "pillow>=11.3.0",
    "pywin32>=311",
    "psutil>=7.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zuu"]
